<resources>
    <string name="app_name">WeatherApp</string>

    //default settings and values
    <string name="default_location">Plovdiv</string>
    <string name="default_future_time_calibration">12:00:00</string>
    <string name="default_future_time_short_calibration">12:00</string>

    //default unit systems
    <string name="default_stack_unit_system">m</string>
    <string name="default_open_unit_system">metric</string>
    //unit systems full names
    <string name="unit_system_full_name_metric">METRIC</string>
    <string name="unit_system_full_name_imperial">IMPERIAL</string>

    // menu strings
    <string name="menu_today">Today</string>
    <string name="menu_one_day">Day</string>
    <string name="menu_sevendays">5 Days</string>
    <string name="menu_settings">Settings</string>

    <string name="loading_string">Loading..</string>
    <string name="feels_like_empty">Feels like:</string>

    // fragment descriptions (subtitle)
    <string name="current_weather_today">Today</string>
    <string name="future_weather_five_days_next">Next 5 days</string>

    // image descriptions
    <string name="hint_refresh_weather_data">refresh weather data</string>
    <string name="hint_image_weather_condition_description">Weather condition icon</string>
    // unit abbreviations
    <string name="percentage">%</string>
    <string name="image_format_png">.png</string>

    // metric unit abbreviations
    <string name="metric_temperature">°C</string>
    <string name="metric_precipitation">mm</string>
    <string name="metric_speed">kph</string>
    <string name="metric_distance">km</string>

    // imperial unit abbreviations
    <string name="imperial_temperature">°F</string>
    <string name="imperial_precipitation">in</string>
    <string name="imperial_speed">mph</string>
    <string name="imperial_distance">mi.</string>

    // weather services settings
    // weather stack settings
    <string name="weather_stack_url">http://api.weatherstack.com/</string>
    <string name="weather_stack_key">d008d274c9b7d028454d802a2f80a75a</string>
<!--    <string name="weather_stack_key">e93ba03d4f5dc92b46365b6108e9a9a6</string>-->
    <string name="weather_stack_key_param">access_key</string>
    <string name="weather_stack_is_day">yes</string>

    // Open weather settings
    <string name="weather_open_url">http://api.openweathermap.org/</string>
    <string name="weather_open_key">5ff56a543a8b4131a9c0a79008db6fd4</string>
    <string name="weather_open_key_param">appid</string>
    <string name="weather_open_icon_url">http://openweathermap.org/img/w/</string>
    <string name="weather_open_is_day">d</string>
    <string name="weather_open_is_night">n</string>

    // date formatters
    <string name="date_formatter_pattern">EEE, MMM d, \'at\' HH:mm</string>
    <string name="date_formatter_from_string_pattern">yyyy-MM-d HH:mm:ss</string>
    <string name="date_formatter_pattern_hour_minutes_only">HH:mm</string>
    <string name="date_formatter_pattern_day_month__only">EEE, MMM d</string>
    <string name="date_formatter_pattern_hours_only">HH</string>
    // others
    <string name="weather_text_rain">Rain:</string>
    <string name="weather_text_snow">Snow:</string>
    <string name="weather_text_sleet">Sleet:</string>
    <string name="weather_text_none">None:</string>

    <string name="weather_text_precipitation">Precipitation: </string>
    <string name="weather_text_precipitation_sleet">Mix Precipitation in Sleet:</string>
    <string name="weather_text_precipitation_snow">Precipitation in Snow:</string>
    <string name="weather_text_precipitation_rain">Precipitation in Rain:</string>
    <string name="weather_text_precipitation_none">None Precipitations</string>
    <string name="weather_text_cloudiness">Cloudiness:</string>
    <string name="weather_text_wind">Wind: </string>
    <string name="weather_text_feels_like">Feels like</string>
    <string name="weather_text_visibility">Visibility: </string>

    <string name="description_icon_day">DayIcon</string>
    <string name="description_icon_night">NightIcon</string>
    <string name="description_each_3_hours_of_day">Each 3 hours of day:</string>

    <string name="weather_text_temp_title_day">Day Time</string>
    <string name="weather_text_temp_title_night">Night Time</string>

    <string name="error_no_info">No information</string>
    <string name="error_no_data_warning">No Data</string>
    <string name="menu_refresh">Refresh Data</string>


    // Preferences
    <string name="preferences_enable_weather_widget">ENABLE_WEATHER_WIDGET</string>
    <string name="preferences_widget_refresh_rate">WEATHER_WIDGET_REFRESH_RATE</string>
    <string name="preferences_show_notifications">SHOW_NOTIFICATIONS</string>
    <string name="preference_current_location">CURRENT_LOCATION_IN_USE</string>
    <string name="preferences_location_custom">CUSTOM_LOCATION</string>
    <string name="preference_location_in_use_key">locationInUse</string>
    <string name="preferences_location_use_device">USE_DEVICE_LOCATION</string>
    <string name="preferences_unit_system">UNIT_SYSTEM</string>
    // Notification
    // Notification channels info
    <string name="notification_channel_id">0</string>
    <string name="notification_channel_description">Show daily notification for today\'s weather</string>
    <string name="notification_channel_name">Weather Temperature</string>
    <string name="notification_ready">Precipitation in Rain</string>
    <string name="notification_title">Sofia, Bulgaria: 26°C </string>
    // Notification Actions
    <string name="notification_action_title">notification.action.title</string>
    <string name="notification_action_desc">notification.action.description</string>
    <string name="notification_action_title_weather_data_key">weatherData</string>

    // Widgets
    <string name="widget_text">Sofia</string>
    <string name="widget_configure">Configure</string>
    <string name="widget_add_button_text">Add widget</string>
    <string name="widget_location">Sofia</string>

    // XML layouts tools descriptions
    <string name="tools_weather_prepacipitation_volume">24 mm</string>
    <string name="tools_weather_wind_speed_and_direction">24 mm</string>
    <string name="tool_zero_temperature">0.0°C</string>
    <string name="tools_default_temp">3.0 C</string>
    <string name="tools_default_temp_nounit">23.0</string>
    <string name="tools_default_temp_nounit_feels_like">Feels like: 22.0</string>

    <string name="warning_device_offline">Your device is offline, can\'t update data</string>
    <string name="snackbar_updation_weather_data">Updating Weather Data</string>

    <string name="loading_updating_data">Updating Weather Data</string>
    <string name="weather_text_temperature">Temperature:</string>
    <string name="future_list">Future List</string>
    <string name="description_next_5_days">Next 5 days: </string>
    <string name="description_next_5_days_charts">Next 5 days charts: </string>

    <string name="preferences_notification_channel_settings">OPEN_NOTIFICATION_CHANNEL_SETTINGS</string>

    // charts action descriptions
    <string name="description_each_3_hours_of_day_chart">Weather Chart</string>
    <string name="description_each_3_hours_of_day_chart_short">Weather Chart</string>

    <string name="description_chart_temperature">Show weather temperature chart</string>
    <string name="description_chart_temperature_short">Temperature chart</string>

    <string name="description_chart_precipitations">Show weather precipitations chart</string>
    <string name="description_chart_precipitations_short">Precipitations chart</string>

    <string name="description_chart_wind">Show weather wind chart</string>
    <string name="description_chart_wind_short">Wind chart</string>

    <string name="description_chart_">Show Weather Chart</string>
    <string name="description_chart_short">Weather Chart</string>

    <string name="future_weather_next_24_hours">Next 24 hours by 3hours intervals</string>
    <string name="future_5days_weather_next_24_hours">Next Days by daily intervals</string>

    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="search_hint">GitHub Repository</string>
    <string name="no_results">No results 😓</string>
    <string name="unknown">\?</string>
    <string name="retry">Retry</string>

    <string name="graphs_default_title">Weather in next 24 hours</string>
    <string name="graphs_5days_default_title">Weather in next days</string>

    <string name="graphs_default_axis_x_name">3 hours intervals</string>
    <string name="graphs_5days_default_axis_x_name">Day intervals</string>

    <string name="graphs_precipitation_title">Precipitations in next 24 hours</string>
    <string name="graphs_5days_precipitation_title">Precipitations in next 24 hours</string>

    <string name="graphs_precipitation_axis_y_namecloud_humid">Cloudiness/Humidity, %</string>
    <string name="graphs_precipitation_line_cloudiness">Cloudiness, %</string>
    <string name="graphs_precipitation_line_humidity">Humidity, %</string>
    <string name="graphs_precipitation_axis_y_name_precip">Precipitations, mm</string>
    <string name="graphs_precipitation_series_rain">Rain, mm</string>
    <string name="graphs_precipitation_series_snow">Snow, mm</string>
    <string name="graphs_precipitation_rain_unit_abbreviation">mm</string>


    <string name="graphs_temperature_title">Weather in next 24 hours</string>
    <string name="graphs_5days_temperature_title">Weather in next days</string>

    <!--    <string name="graphs_precipitation_axis_y_namecloud_humid">Cloudiness/Humidity, %</string>-->
    <string name="graphs_wind_line_speed">Wind speed, m/s</string>
    <string name="graphs_wind_line_degree">Degree, 0</string>
    <string name="graphs_wind_axis_y_name_degree">Wind degree, *</string>
    <string name="graphs_wind_axis_y_name_speed">Wind Speed, m/s</string>
    <string name="graphs_wind_series_speed">Wind Speed, m/s</string>
    <string name="graphs_wind_series_degree">Wind degree</string>
    <string name="graphs_wind_speed_unit_abbreviation">m/s</string>
    <string name="graphs_wind_title">Wind component in next 24 hours</string>
    <string name="graphs_5days_wind_title">Wind component in next Days</string>
    <string name="feels_like">Feels like:</string>
</resources>