<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/currentWeatherFragment"
        android:icon="@drawable/ic_today"
        android:title="@string/menu_today"/>
    <item
        android:id="@+id/oneDayWeatherFragment"
        android:icon="@drawable/ic_today"
        android:title="@string/menu_one_day"/>

    <item
        android:id="@+id/FutureListWeatherFragment"
        android:icon="@drawable/ic_calendar_week"
        android:title="@string/menu_sevendays"/>
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:visible="false"
        app:showAsAction="never" />

</menu>