<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/futureListWeatherFragmentSwipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/futureListWeatherFragment"
        android:name="com.bzahov.weatherapp.ui.navigation.FutureListWeatherFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.weather.future.list.FutureListWeatherFragment">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/futureTextDescriptionView"
            style="@style/MyMaterialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_next_5_days"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/futureRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/layout_animation_from_right"
            android:text="@string/future_list"
            app:layout_constraintBottom_toTopOf="@+id/futureChartDescriptionView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/futureTextDescriptionView"
            tools:listitem="@layout/item_future_weather" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/futureGroupLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:constraint_referenced_ids="futureProgressBarLoading, futureTextViewLoading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/futureProgressBarLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/futureTextViewLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/loading_string"
            android:textAppearance="@style/TextAppearance.MyTheme.Caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/futureProgressBarLoading" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/futureChartDescriptionView"
            style="@style/MyMaterialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/description_next_5_days"
            app:layout_constraintBottom_toTopOf="@+id/futureChartChipGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/futureChartChipGroup"
            style="@style/MyChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:layout_margin="10dp"
            android:layoutAnimation="@anim/layout_animation_to_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/futureChartTemperature"
                style="@style/MyChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_chart_temperature_short"
                app:chipIcon="@drawable/temperature_black40px" />

            <com.google.android.material.chip.Chip
                android:id="@+id/futureChartPrecipitation"
                style="@style/MyChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_chart_precipitations_short"
                app:chipIcon="@drawable/sleet_black40px" />

            <com.google.android.material.chip.Chip
                android:id="@+id/futureChartWind"
                style="@style/MyChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_chart_wind_short"
                app:chipIcon="@drawable/wind_black40px" />

            <com.google.android.material.chip.Chip
                android:id="@+id/futureChartText"
                style="@style/MyChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_chart_short"
                app:chipIcon="@drawable/ic_weather_sunny" />

        </com.google.android.material.chip.ChipGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>